[package]
name = "dragoonfly"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["semi-avid-pc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
futures = "0.3"
axum = "0.6.20"
serde = { version = "1.0.192", features = ["derive"] }
regex = "1.10.2"
thiserror = "1.0.50"
futures-timer = { version = "3.0.2", features = [] }

[dependencies.libp2p]
default-features = false
features = [
    "async-std",
    "cbor",
    "dns",
    "identify",
    "kad",
    "noise",
    "request-response",
    "tcp",
    "yamux",
]
version = "0.53.0"
