[package]
name = "dragoonfly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
futures = "0.3"
axum = "0.6.20"
serde = { version = "1.0.192", features = ["derive"] }
regex = "1.10.2"
thiserror = "1.0.50"
futures-timer = { version = "3.0.2", features = [] }
komodo = {path = "./komodo"}
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
anyhow = "1.0.82"
ark-std = "0.4.0"
axum-macros = "0.4.1"
rand = "0.8.5"
ark-poly = "0.4.2"
serde_json = "1.0.116"
bs58 = "0.5.1"
rs_merkle = "1.4.2"
resolve-path = "0.1.0"

[dependencies.libp2p]
default-features = false
features = [
    "async-std",
    "cbor",
    "dns",
    "identify",
    "kad",
    "noise",
    "request-response",
    "tcp",
    "yamux",
]
version = "0.53.0"

[features]
file-sharing = []
