[package]
name = "semi-avid-pc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-poly-commit = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
rs_merkle = "1.4.1"
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
serde_json = "1.0.108"
